--- a/modules/components/dropdown/tag-input-dropdown.scss
+++ b/modules/components/dropdown/tag-input-dropdown.scss
@@ -12,7 +12,7 @@
   align-items: center;
 }
 
-.new-secondary-purpose {
+.dropdown-bottom-text {
   font-size: 14px;
   font-weight: bold;
   color: #359cbf;
