--- a/modules/components/dropdown/tag-input-dropdown.template.html
+++ b/modules/components/dropdown/tag-input-dropdown.template.html
@@ -16,7 +16,7 @@
             </ng-template>
         </ng2-menu-item>
       <div class="dropdown-bottom-button">
-        <span class="new-secondary-purpose">New secondary purpose</span>
+        <span class="dropdown-bottom-text">{{actionButtonText}}</span>
       </div>
     </ng2-dropdown-menu>
 </ng2-dropdown>
