--- a/modules/components/tag-input/tag-input.template.html
+++ b/modules/components/tag-input/tag-input.template.html
@@ -14,10 +14,9 @@
      [class.ng2-tag-input--loading]="isLoading"
      [class.ng2-tag-input--invalid]="hasErrors()"
      [class.ng2-tag-input--focused]="isInputFocused()">
-<div #tagContainerCustom class="rectangle"></div>
 
   <!-- TAGS -->
-    <div class="ng2-tags-container">
+    <div #tagContainerCustom class="ng2-tags-container">
         <tag *ngFor="let item of items; let i = index; trackBy: trackBy"
 
              (onSelect)="selectItem(item)"
